<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
 
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:weightSum="100" android:orientation="vertical">
  
  <LinearLayout
    android:layout_height="0dp"
        android:layout_weight="19"
    android:orientation="horizontal" android:layout_width="fill_parent">
      <Gallery 
       android:id="@+id/listview12"
      android:layout_width="fill_parent"
	  android:layout_height="fill_parent"
      />
  
   </LinearLayout>
  
   <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp" 
       
        android:background="@color/black"      
     
        android:layout_weight="1"
       />
    <LinearLayout
    android:layout_height="0dp"
        android:layout_width="fill_parent" 
    android:layout_weight="80"
    >

<RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


	        
    <Button
        android:id="@+id/send_message"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="sendMessageClicked"
        android:text="@string/button_send" />
    
    <TextView
        android:id="@+id/isComposingIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/send_message"
        android:layout_alignTop="@+id/send_message"
        android:layout_gravity="center"
	    android:textAppearance="?android:attr/textAppearanceSmall"
        android:padding="10dp"
        android:text="@string/isComposingEllipsis"
        android:visibility="visible" />
    
    <EditText
        android:id="@+id/message_input_box"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/send_message"
        android:layout_alignParentLeft="true"
        android:layout_gravity="left"
        android:contentDescription="@string/enter_message_hint"
        android:ems="10"
        android:inputType="textMultiLine"
        android:minLines="3" >
        <requestFocus/>
    </EditText>
	 
    <LinearLayout
        android:id="@+id/messageListHolder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/message_input_box"
        >

        <ListView
            android:id="@+id/messageList"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:divider="#b5b5b5"
            android:dividerHeight="1dp"
            >

        </ListView>
    </LinearLayout>
    
</RelativeLayout>
 </LinearLayout>
 
 <!--  <LinearLayout 
        android:layout_width="0dp"
        android:layout_height="match_parent" 
       
        android:background="@color/black"      
     
        android:layout_weight="1"
       />
    
    
    <LinearLayout
     android:layout_height="fill_parent"
      android:layout_width="0dp" 
   android:layout_weight="39"

     >
     
     
     <ListView
	            android:id="@+id/chatcontactList"
	            android:layout_height="match_parent"	
	            android:divider="#b5b5b5"
        		android:dividerHeight="1dp"
        		android:listSelector="@drawable/list_selector"  
        		
	            android:layout_width="match_parent">    		
	    </ListView>
    </LinearLayout>-->
  </LinearLayout>